fix for content on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,6 @@ h1 {
 p {
   font-size: 1rem;
   text-align: left;
-  margin: 6px;
 }
 
 .button {
@@ -133,7 +132,7 @@ p {
     padding: 10px;
     height: 14vh;
     width: 126vh;
-    min-width: 550px;
+    /* min-width: 550px; */
   }
 
   .project {
@@ -192,12 +191,13 @@ p {
 
 @media only screen and (max-width: 375px) and (max-height: 812px) {
   .content {
-    padding: 2px;
+    padding: 18px;
     height: 200px;
     width: 38vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    align-content: space-around;
     text-align: center;
   }
 
@@ -214,11 +214,6 @@ p {
 
   p {
     font-size: 0.8rem;
-  }
-
-  body,
-  .container {
-    overflow-x: hidden;
   }
 
   .button {
